# EasyPaper

./: .dockerignore  .gitignore  AGENTS.md  AGENTS_zh.md  Dockerfile  README.md  README_zh.md  pyproject.toml
.claude-plugin/: README.md  marketplace.json
.github/workflows/: ci.yml  deploy.yml  publish.yml
.opencode/: opencode.json
configs/: example.yaml
easypaper/: client.py  main.py
easypaper/agents/: __init__.py  base.py  react_base.py
easypaper/agents/metadata_agent/: metadata_agent.py  models.py  router.py
easypaper/agents/parse_agent/: parse_agent.py
easypaper/agents/planner_agent/: models.py  planner_agent.py  router.py
easypaper/agents/reviewer_agent/: models.py
easypaper/agents/shared/: llm_client.py  prompt_compiler.py  reference_pool.py  session_memory.py  table_converter.py  vlm_service.py
easypaper/agents/template_agent/: template_agent.py
easypaper/agents/typesetter_agent/: models.py  router.py  typesetter_agent.py
easypaper/agents/vlm_review_agent/: models.py  vlm_review_agent.py
easypaper/agents/writer_agent/: models.py  router.py  section_models.py  writer_agent.py
easypaper/config/: loader.py  schema.py
easypaper/skills/: generator.py  registry.py
openclaw_skill/: SKILL_zh.md
plugins/easypaper/.claude-plugin/: plugin.json
plugins/easypaper/commands/: easypaper.md  easypaper_zh.md  paper-from-metadata.md  paper-from-metadata_zh.md  paper-section_zh.md  setup_zh.md
scripts/: generate_paper.py
skills/writing/: latex_conventions.yaml
src/: __init__.py  events.py  main.py
src/agents/: base.py
src/agents/commander_agent/: commander_agent.py  models.py  router.py
src/agents/metadata_agent/: metadata_agent.py  models.py  router.py
src/agents/parse_agent/: parse_agent.py  router.py
src/agents/planner_agent/: models.py  planner_agent.py  router.py
src/agents/reviewer_agent/: models.py  reviewer_agent.py  router.py
src/agents/shared/: prompt_compiler.py
src/agents/shared/tools/: __init__.py  (+1 more)
src/agents/template_agent/: template_agent.py
src/agents/typesetter_agent/: models.py  router.py  typesetter_agent.py
src/agents/vlm_review_agent/: models.py  router.py  vlm_review_agent.py
src/agents/writer_agent/: models.py  router.py  writer_agent.py
src/config/: __init__.py  loader.py  schema.py
src/skills/: cli.py  loader.py  registry.py  router.py
tests/: test_emit_helper.py  test_events.py  test_package.py
user_case/: config.example.yaml  user.py
(+18 files in other folders)
