[project]
name = "agentsys"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.121.1",
    "uvicorn[standard]>=0.30.0,<0.31",
    "ipython>=9.7.0",
    "langchain>=1.0.5",
    "openai>=2.7.2",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "langgraph>=0.0.26",
    "jinja2>=3.1.0",
    "httpx>=0.27.0",
    "aiofiles>=24.1.0",
    "pymupdf>=1.26.7",
    "pdf2image>=1.17.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
